--- a/public/todo.html
+++ b/public/todo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Too Doo</title>
+    <title>Too Doo Right</title>
     <link rel="stylesheet" href="common/reset.css">
     <link rel="stylesheet" href="common/main.css">
     <link rel="stylesheet" href="common/Header.css">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="todo/TodoApp.css">
     <link rel="stylesheet" href="todo/AddTodo.css">
     <link rel="stylesheet" href="todo/TodoList.css">
-    <link rel="stylesheet" href="todo/TodoItem.css"
+    <link rel="stylesheet" href="todo/TodoItem.css">
 </head>
 <body>
     <script type="module" src="todo/todo.js"></script>
